--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "backend project for untold",
   "main": "index.js",
   "scripts": {
-    "build": "yarn && tsc",
+    "build": "tsc && yarn",
     "start": "node dist/index.js",
     "dev": "nodemon index.ts"
   },
